Sun Aug 25 09:34:34 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c:
	- best conversion from unicode, replace wrong characters with '?'
	  (both iconv and C code)
	- do not return garbage data
	* src/tds/mem.c:
	- init iconv cd to -1 to avoid possible wrong iconv_close calls

Fri Aug 23 21:35:19 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in include/tdsconvert.h src/ctlib/ct.c:
	* src/ctlib/ctutil.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/tds/convert.c src/tds/query.c:
	- other minor cleanup

Fri Aug 23 15:08:49 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsconvert.h include/tdsutil.h src/ctlib/ct.c:
	* src/dblib/dblib.c src/tds/asprintf.c src/tds/config.c:
	* src/tds/convert.c src/tds/locale.c src/tds/login.c:
	* src/tds/read.c src/tds/token.c:
	- removed some warning

Thu Aug 22 21:06:01 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	(patches from castellano)
	* configure.in:
	- small problem testing for gethostbyaddr function
	* src/tds/config.c:
	- make compatible with no-gcc compiler

Thu Aug 22 21:06:01 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c src/tds/login.c src/tds/read.c:
	*  src/tds/token.c src/tds/write.c:
	- changed all print to stderr to log

Thu Aug 22 18:10:18 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- added cases for SYBUNIQUE, do not warn on disallowed conversion

Thu Aug 22 17:35:34 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c:
	- fix error that cause core dump in Linux, errno is strangely
	  defined in Linux, do not use for variable name

Thu Aug 22 10:44:52 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- workaround for set autocommit option
	* src/tds/convert.c:
	- avoiding writing to stderr, use tdsdump_log

Wed Aug 21 23:28:58 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c	better diagnostics and -v support